Fix position of form fields' making errors overlap its title

--- a/src/subtitulamos/resources/assets/css/form.css
+++ b/src/subtitulamos/resources/assets/css/form.css
@@ -17,14 +17,11 @@
   align-items: center;
   flex-direction: row-reverse;
   border-bottom: 1px solid var(--color-gray-divisions);
-  padding: 0px 15px;
   margin-bottom: var(--spacing-xs);
   background-color: var(--color-offwhite);
   border-radius: 0.2rem;
   position: relative;
-}
-
-.form-field:not(.checkbox-field) {
+  padding-left: 15px;
   padding-top: 20px;
 }
 
@@ -55,8 +52,9 @@
 .form-field select {
   flex: 1;
   color: var(--color-gray-a);
-  padding: var(--standard-padding);
   max-width: calc(100% - 20px); /* whole width minus icon size */
+  margin: var(--standard-padding);
+  height: 1.5rem;
 }
 
 /* Workaround to make the background of autofilled fields invisible */
@@ -65,16 +63,6 @@
 .form-field input:-webkit-autofill:focus,
 .form-field input:-webkit-autofill:active {
   transition: background-color 5000s ease-in-out 0s !important;
-}
-
-.form-field.dropdown-field {
-  padding-right: 0;
-}
-
-.form-field.checkbox-field {
-  flex-direction: row;
-  background-color: transparent;
-  border: none;
 }
 
 .checkbox {
@@ -114,10 +102,6 @@
 
 .checkbox.checked:not(.disabled) i {
   color: var(--color-offwhite) !important;
-}
-
-.form-field select {
-  padding-right: 50px;
 }
 
 .form-field > .dropdown {
